--- a/style.css
+++ b/style.css
@@ -5826,10 +5826,11 @@ margin-top: 37px;
   
 .geniecustomers {
   width: 93% !important;
+  max-width: 750px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -30px;
-  margin-bottom: 5px;
+  margin-top: 25px;
+  margin-bottom: 30px;
 }
 
 @media (min-width: 820px) and (max-width: 1200px) and (orientation: landscape) {
@@ -5867,14 +5868,6 @@ margin-top: 37px;
   margin-top: -10px;
   margin-bottom: 20px;
 }  
-}
-
-
-@media (min-width: 100px) and (max-width: 819px) {
-  
-.geniecustomers {
-  display: none !important;
-}    
 }
 
 
