--- a/style.css
+++ b/style.css
@@ -7024,8 +7024,7 @@ margin-top: 37px;
 }
 
 .mural {
-  background: linear-gradient(60deg, rgb(82, 67, 170), rgb(237, 80, 180)) 0% 0% /
-    auto repeat scroll padding-box border-box rgb(82, 67, 170);
+  background: #2c2447;
   background-blend-mode: normal, normal;
   color: rgb(255, 255, 255);
 }
