--- a/style.css
+++ b/style.css
@@ -1550,17 +1550,18 @@ footer {
 }
 
 .main-nav {
-  position: fixed;
-  display: flex;
-  box-sizing: border-box;
-  padding: 0px;
-  top: 0;
-  left: 0;
-  height: 72px;
-  width: 100%;
-  justify-content: space-between;
-  background: #2d333b;
-  z-index: 5;
+    position: fixed;
+    display: flex;
+    box-sizing: border-box;
+    padding: 0px;
+    top: 0;
+    left: 0;
+    height: 80px;
+    width: 100%;
+    justify-content: space-between;
+    background: #2b2546;
+    z-index: 5;
+    border-bottom: 1px solid #3b325c;
 }
 
 
@@ -5778,27 +5779,28 @@ margin-top: 37px;
 }
 
 .regions-picker {
-  text-decoration: none;
   display: inline-block !important;
   padding: 0px 20px !important;
-  font-size: 16px !important;
-  font-weight: var(--base-text-weight-medium, 500) !important;
-  line-height: 38px !important;
   white-space: nowrap !important;
   vertical-align: middle !important;
-  cursor: pointer !important;
   user-select: none !important;
-  border: 1px solid #46874c;
-  border-radius: 8px;
-  font-family: "Saoecom2font" !important;
-  color: #feffff !important;
-  background-color: #347d39 !important;
   height: 41px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  margin-top: 29px;
-  margin-bottom: -10px;
+  background: #2c2447;
+  border: 0px solid #2c2447;
+  border-radius: 12px !important;
+  text-decoration: none;
+    font-size: 1.5rem !important;
+    cursor: pointer !important;
+    font-family: "genie9" !important;
+    color: rgb(255 162 208) !important;
+    line-height: 32px;
+    margin-right: 10%;
+    margin-left: 10%;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
 
 .regions-picker:hover {
@@ -6676,8 +6678,16 @@ margin-top: 37px;
 
 .ficus3 {
   text-align: center;
-  padding-top: 0px;
-  padding-bottom: 15px;
+  text-decoration: none;
+    font-size: 1.5rem !important;
+    cursor: pointer !important;
+    font-family: "genie9" !important;
+    color: rgb(255 162 208) !important;
+    line-height: 32px;
+    margin-right: 10%;
+    margin-left: 10%;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
 
 
