--- a/style.css
+++ b/style.css
@@ -1643,7 +1643,7 @@ img.navlogo {
 .navlogo {
     padding-top: 9px;
     line-height: 10px;
-    width: 110px !important;
+    width: 135px !important;
     padding-left: 9px;
 }
 
@@ -2219,20 +2219,19 @@ purpleblockswww2001 {
 }
 
 .btn3 {
-  border: 1px solid rgb(205 217 229 / 10%) !important;
-  border-radius: 0px 8px 8px 0px !important;
-  margin-right: -2px !important;
-  text-decoration: none !important;
-  color: #adbac7 !important;
-  background: #373e47 !important;
-  font-size: 16px !important;
-  height: 41px !important;
-  padding-top: 10px !important;
+    border: 1px solid #414762 !important;
+    border-radius: 0px 10px 10px 0px !important;
+    margin-right: -2px !important;
+    text-decoration: none !important;
+    color: #adbac7 !important;
+    background: #2e3349!important;
+    font-size: 16px !important;
+    height: 46px !important;
+    padding-top: 12px !important;
     padding-bottom: 11px !important;
-  padding-left: 22px !important;
-  padding-right: 23px !important;
+    padding-left: 22px !important;
+    padding-right: 23px !important;
     letter-spacing: 0 !important;
-
 }
 
 
