--- a/style.css
+++ b/style.css
@@ -4556,22 +4556,6 @@ padding-bottom: 15px !important;
   }
 }
 
-.moduleitem {
-  width: 100% !important;
-
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  margin: 15px 0;
-
-  margin-right: 0px;
-  margin-left: 0px;
-  border-radius: 12px;
-  background: #21272e;
-  border: #454c56 1px solid;
-  height: 88px;
-  padding-right: 11px;
-}
 
 .moduleitempinned {
   width: 100% !important;
@@ -4639,20 +4623,7 @@ padding-bottom: 15px !important;
   border: #549bf5 1px solid !important;
 }
 
-.moduleitem:hover {
-  width: 100% !important;
 
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  margin: 15px 0;
-
-  margin-right: 0px;
-  margin-left: 0px;
-  border-radius: 12px;
-  background: rgb(65 132 228 / 15%);
-  border: #549bf5 1px solid;
-}
 
 .moduleitemcol1 {
   width: 40%;
@@ -8190,8 +8161,22 @@ border: 1px solid #30363d;
 .itemdirectory {
 background: #24292f; 
 display: flex;
-  height: 70px;
+height: 70px;
+border: 1px solid #30363d;
+border-radius: 12px;
+margin-left: auto;
+margin-right: auto; 
+
 }
+
+
+.itemdirectory:hover {
+  background: rgb(65 132 228 / 15%);
+  border: #549bf5 1px solid;
+
+}
+
+
 
 
 .itemdirectory-left {
@@ -8211,3 +8196,4 @@ text-align: right;
 .saasduoentitled {
   white-space: nowrap;
 }
+
