🏩💗 Checkpoint ./index.html:33983566/331 ./style.css:33983566/98

--- a/style.css
+++ b/style.css
@@ -5782,9 +5782,9 @@ margin-top: 37px;
   width: 100% !important;
   display: block;
   justify-content: center;
-  margin: 15px 0;
-  border-radius: 12px;
-  background: transparent;
+  margin: 0;
+  border-radius: 0px;
+  background: linear-gradient(180deg, rgb(34 39 46), rgb(43 37 70));
   border: #454c56 0px solid;
   max-width: 1600px;
   margin-left: auto;
