--- a/style.css
+++ b/style.css
@@ -1561,23 +1561,25 @@ footer {
     background: #2b2546;
     z-index: 5;
     border-bottom: 0px solid #3b325c;
+  padding-left: 3px;
+    padding-right: 3px;
 }
 
 
 @media (min-width: 100px) and (max-width: 819px) {
   
 .main-nav {
-  position: fixed;
-  display: flex;
-  box-sizing: border-box;
-  padding: 0px;
-  top: 0;
-  left: 0;
-  height: 72px;
-  width: 100%;
-  justify-content: space-between;
-  background: #2d333b !important;
-  z-index: 5;
+    display: flex;
+    box-sizing: border-box;
+    padding: 0px;
+    top: 0;
+    left: 0;
+    height: 85px;
+    width: 100%;
+    justify-content: space-between;
+    background: #2b2546;
+    z-index: 5;
+    border-bottom: 0px solid #3b325c;
 }
   
 }
@@ -1642,7 +1644,7 @@ img.navlogo {
 .navlogo {
     padding-top: 9px;
     line-height: 10px;
-    width: 150px !important;
+    width: 160px !important;
     padding-left: 9px;
 }
 
@@ -6135,7 +6137,7 @@ margin-top: 37px;
 
 .geniepost {
   text-decoration: none;
-  font-size: 80px !important;
+  font-size: 82px !important;
   cursor: default !important;
   font-family: "genie18" !important;
   color: rgb(255, 255, 255) !important;
