🐙🚖 Checkpoint ./index.html:33983566/52 ./style.css:33983566/405

--- a/style.css
+++ b/style.css
@@ -2595,16 +2595,18 @@ purpleblockswww2001 {
 .cube-btn1 {
   margin-bottom: 20px;
 max-width: 360px;
-  border: 1px #316dca;
-  border-radius: 8px 8px 8px 8px;
+  border: 1px #1f6feb;
+  border-radius: 10px 10px 10px 10px;
   /* margin-right: -2px; */
   margin-top: -5px;
   text-decoration: none;
-  color: #cdd9e5 !important;
-  background: #316dca !important;
-  font-size: 16px !important;
-  height: 41px !important;
-  padding-top: 11px !important;
+  color: #e9f2ff !important;
+  background: #1f6feb !important;
+  
+  font-size: 18px !important;
+    height: 52px !important;
+    padding-top: 16px !important;
+
   padding-left: 22px !important;
   padding-right: 23px !important;
   width: 361px !important;
@@ -6661,8 +6663,8 @@ display: inline-block !important;
     line-height: 32px;
     margin-right: 10%;
     margin-left: 10%;
-margin-top: 35px;
-    margin-bottom: -12px;
+margin-top: 45px;
+    margin-bottom: -8px;
 }
 
 
