--- a/style.css
+++ b/style.css
@@ -3560,24 +3560,25 @@ h1.tag {
 }
 
 .ficusbtn-nvidia {
-  text-decoration: none;
-  display: inline-block !important;
-  padding: 0px 20px !important;
-  font-size: 16px !important;
-  font-weight: var(--base-text-weight-medium, 500) !important;
-  line-height: 40px !important;
-  white-space: nowrap !important;
-  vertical-align: middle !important;
-  cursor: pointer !important;
-  user-select: none !important;
-  border: 1px solid #46874c;
-  border-radius: 8px;
-  font-family: "Saoecom2font" !important;
-  color: #feffff !important;
-  background-color: #347d39 !important;
-  height: 41px;
-  margin-top: 24.2px;
-  margin-right: 10px;
+    text-decoration: none;
+    display: inline-block !important;
+    padding: 4px 20px !important;
+    font-size: 18px !important;
+    font-weight: var(--base-text-weight-medium, 500) !important;
+    line-height: 40px !important;
+    white-space: nowrap !important;
+    vertical-align: middle !important;
+    cursor: pointer !important;
+    user-select: none !important;
+    border: 1px solid #46874c;
+    border-radius: 10px;
+    font-family: "Saoecom2font" !important;
+    color: #feffff !important;
+    background-color: #347d39 !important;
+    height: 50px;
+    margin-top: 9px;
+    margin-bottom: auto;
+    margin-right: 10px;
 }
 
 .buttonalert:hover {
@@ -8159,7 +8160,8 @@ border: 1px solid #30363d;
 border-radius: 12px;
 margin-left: auto;
 margin-right: auto; 
-
+  margin-bottom: 14px;
+width: 100%;
 }
 
 
@@ -8186,7 +8188,10 @@ width: 50%;
 text-align: right;
 }
 
+
 .saasduoentitled {
   white-space: nowrap;
+  font-family: "genie9" !important;
+  font-size: 18px;
 }
 
