--- a/style.css
+++ b/style.css
@@ -4860,12 +4860,7 @@ padding-bottom: 15px !important;
   display: none;
 }
 
-.search-container {
-  padding: 20px;
-  text-align: right;
-  padding-right: 47px;
-  padding-left: 0px;
-}
+
 @media screen and (max-width: 980px) {
   .search-container {
     display: contents;
@@ -4902,7 +4897,7 @@ input[type="text2"]:focus {
   padding: 8px;
   font-size: 16px;
   font-family: "Post1" !important;
-  font-size: 14px;
+  font-size: 18px;
   letter-spacing: 1;
   border: solid 1px #3b3b3b !important;
   width: 280px;
@@ -4920,9 +4915,9 @@ input[type="text2"]:focus {
 
 input[type="text"] {
   padding: 8px;
-  font-size: 16px;
+  font-size: 18px;
   font-family: "Post1" !important;
-  font-size: 14px;
+  font-size: 18px;
   letter-spacing: 1;
   border: solid 1px #3b3b3b !important;
   width: 400px;
@@ -4933,70 +4928,36 @@ input[type="text"] {
 }
 
 .nsi-engine {
-  padding: 8px !important;
-font-size: 16px !important;
-  letter-spacing: 1 !important;
-  border: solid 1px #454c56 !important;
-  border-radius: 8px !important;
-  width: 86% !important;
-  margin-left: 46px !important;
-  background-color: #1c2128 !important;
-  box-shadow: 0 0 0px 4px #454c5647 !important;
-font-family: "Saoecom2font" !important;
+    padding: 8px !important;
+    font-size: 18px !important;
+    letter-spacing: 1 !important;
+    border: solid 1px #454e57 !important;
+    border-radius: 10px !important;
+    width: 100% !important;
+    background-color: #373e47 !important;
+    font-family: "Saoecom2font" !important;
     color: #adbac7 !important;
-  margin-top: 29px;
-  margin-bottom: 8px;
-  height: 42px;
-  transition: transform 0s;
-  text-align: center;
+    margin-top: 29px;
+    margin-bottom: 15px;
+    height: 52px;
+    transition: transform 0s;
+    text-align: center;
 }
 
 input::placeholder {
 font-family: "Saoecom2font" !important;
-    color: #adbac73b !important;
+    color: #5e656b !important;
   letter-spacing: 1 !important;
-  font-size: 16px !important;
+  font-size: 18px !important;
 }
 
 
 .nsi-engine:hover {
-  padding: 8px !important;
-font-size: 16px !important;
-  letter-spacing: 1 !important;
-  border: solid 1px #454c56 !important;
-  border-radius: 8px !important;
-  width: 86% !important;
-  margin-left: 46px !important;
-  background-color: #1c2128 !important;
-  box-shadow: 0 0 0px 4px #008eff38 !important;
-font-family: "Saoecom2font" !important;
-    color: #adbac7 !important;
-  margin-top: 29px;
-  margin-bottom: 8px;
-  height: 42px;
-  transition: transform 0s;
-    text-align: center;
-
+  box-shadow: 0 0 0px 4px #008eff38;
 }
 
 .nsi-engine:focus {
-  padding: 8px !important;
-font-size: 16px !important;
-  letter-spacing: 1 !important;
-  border: solid 1px #454c56 !important;
-  border-radius: 8px !important;
-  width: 86% !important;
-  margin-left: 46px !important;
-  background-color: #1c2128 !important;
-  box-shadow: 0 0 0px 4px #008eff38 !important;
-font-family: "Saoecom2font" !important;
-    color: #adbac7 !important;
-  margin-top: 29px;
-  margin-bottom: 8px;
-  height: 42px;
-  transition: transform 0s;
-    text-align: center;
-
+  box-shadow: 0 0 0px 4px #008eff38;
 }
 
 .nsi-engine:placeholder {
@@ -8142,12 +8103,13 @@ margin-bottom: 30px !important;
 
 .directory {
 background: #161b22; 
-max-width: 850px;
+max-width: 700px;
 width: 100%;
 margin-left: auto;
 margin-right: auto;
 border-radius: 12px;
-padding: 10px;
+padding: 12px;
+  padding-bottom: 0px !important;
 border: 1px solid #30363d;
   box-shadow: 0 2.74416px 2.74416px rgba(0,0,0,.0274351), 0 5.48831px 5.48831px rgba(0,0,0,.0400741), 0 13.7208px 10.9766px rgba(0,0,0,.0499982), 0 20.5812px 20.5812px rgba(0,0,0,.0596004), 0 41.1623px 41.1623px rgba(0,0,0,.0709366), 0 96.0454px 89.1851px rgba(0,0,0,.09);
 }
@@ -8193,5 +8155,6 @@ text-align: right;
   white-space: nowrap;
   font-family: "genie9" !important;
   font-size: 18px;
+  cursor: default;
 }
 
