🐴👢 Checkpoint ./style.css:33983566/334445

--- a/style.css
+++ b/style.css
@@ -7132,7 +7132,7 @@ input[type="text"]:focus {
 
 .login-door {
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
   display: block;
   text-align: center;
   flex-flow: row wrap;
@@ -7148,28 +7148,8 @@ input[type="text"]:focus {
   border-bottom: 1px solid #454c56;
   border-left: 1px solid #454c56;
   border-right: 1px solid #454c56;
-}
-
-@media (min-width: 100px) and (max-width: 819px) {
-  .login-door {
-    width: 85%;
-    max-width: 335px;
-    display: block;
-    text-align: center;
-    flex-flow: row wrap;
-    justify-content: center;
-    margin-right: auto;
-    margin-left: auto;
-    border: 1px solid #d9e1ec;
-    margin-left: auto;
-    margin-right: auto;
-    background: #22272e;
-    border-radius: 12px 12px 12px 12px;
-    border-top: 1px solid #454c56;
-    border-bottom: 1px solid #454c56;
-    border-left: 1px solid #454c56;
-    border-right: 1px solid #454c56;
-  }
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .resterencouple2 {
@@ -7225,24 +7205,33 @@ input[type="text"]:focus {
 
 .cube12 {
   width: 100% !important;
-  margin-bottom: 10px;
+  margin-top: 12px;
   font-family: "Saoecom2font" !important;
   border-left: 1px solid rgb(205 217 229 / 10%) !important;
   border-top: 1px solid rgb(205 217 229 / 10%) !important;
   border-bottom: 1px solid rgb(205 217 229 / 10%) !important;
   border-right: 1px solid rgb(205 217 229 / 10%) !important;
-  border-radius: 8px 8px 8px 8px !important;
+  border-radius: 10px !important;
   text-decoration: none !important;
   color: #adbac7 !important;
   background: #373e47 !important;
-  font-size: 16px !important;
-  height: 40px !important;
+  font-size: 18px !important;
+  height: 52px !important;
   padding-top: 8.5px !important;
   padding-left: 15px !important;
   padding-right: 14px !important;
   outline: none !important;
   transition-duration: 0s;
   text-transform: lowercase;
+  text-align: center !important;
+}
+
+.cube12:hover {
+  box-shadow: 0 0 0px 4px #008eff38;
+}
+
+.cube12:focus {
+  box-shadow: 0 0 0px 4px #008eff38;
 }
 
 @media (min-width: 100px) and (max-width: 819px) {
@@ -7290,14 +7279,14 @@ input[type="text"]:focus {
 .cube-btn12 {
   margin-bottom: 20px;
   border: 1px #316dca;
-  border-radius: 8px 8px 8px 8px;
-  margin-top: -18px;
+  border-radius: 10px;
+  margin-top: -6px;
   text-decoration: none;
   color: #cdd9e5 !important;
   background: #316dca !important;
-  font-size: 16px !important;
-  height: 41px !important;
-  padding-top: 11px !important;
+  font-size: 18px !important;
+  height: 52px !important;
+  padding-top: 16px !important;
   padding-left: 22px !important;
   padding-right: 23px !important;
   width: 100% !important;
@@ -7358,13 +7347,13 @@ input[type="text"]:focus {
   margin-right: auto !important;
   text-align: center;
   margin-top: 37px;
-  margin-bottom: 20px;
   font-size: 18px !important;
   cursor: default !important;
   font-family: "genie9" !important;
   color: #7d8590 !important;
   padding-right: 30px;
   padding-left: 30px;
+  line-height: 25px;
 }
 
 @media (min-width: 100px) and (max-width: 819px) {
@@ -7374,7 +7363,6 @@ input[type="text"]:focus {
     margin-right: auto !important;
     text-align: center;
     margin-top: 37px;
-    margin-bottom: 20px;
     font-size: 14px !important;
     cursor: default !important;
     font-family: "genie9" !important;
@@ -7390,6 +7378,7 @@ input[type="text"]:focus {
   cursor: pointer !important;
   font-family: "genie9" !important;
   text-decoration: none;
+  line-height: 25px;
 }
 
 .cristalinefooterlink2:hover {
@@ -7398,6 +7387,7 @@ input[type="text"]:focus {
   cursor: pointer !important;
   font-family: "genie9" !important;
   text-decoration: none;
+  line-height: 25px;
 }
 
 .andreasmarques {
@@ -7502,7 +7492,6 @@ input[type="text"]:focus {
   font-size: 18px;
   cursor: default;
 }
-
 
 body.login-page {
   background-color: #2d333b !important;
