--- a/style.css
+++ b/style.css
@@ -5328,7 +5328,7 @@ input[type="text"]:focus {
 
 .moustache {
   text-decoration: none;
-  font-size: 13px !important;
+  font-size: 14px !important;
   cursor: pointer !important;
   font-family: "genie13" !important;
   color: #fa8970 !important;
@@ -7404,7 +7404,7 @@ input[type="text"]:focus {
 
 .viewportpost {
   width: 80% !important;
-  max-width: 370px !important;
+  max-width: 400px !important;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -7422,7 +7422,7 @@ input[type="text"]:focus {
   text-align: left;
   margin-top: 37px;
   margin-bottom: 20px;
-  font-size: 14px !important;
+  font-size: 18px !important;
   cursor: default !important;
   font-family: "genie9" !important;
   color: #e6edf3 !important;
@@ -7432,7 +7432,7 @@ input[type="text"]:focus {
 
 .juriplace-img {
   padding-top: 9px;
-  width: 150px !important;
+  width: 160px !important;
   margin-bottom: 0px;
   margin-left: 20px;
 }
@@ -7494,5 +7494,26 @@ input[type="text"]:focus {
 }
 
 body.login-page {
+  background-color: #2d333b !important;
+}
+
+
+body.register-page {
+  background-color: #2d333b !important;
+}
+
+body.support-page {
+  background-color: #2d333b !important;
+}
+
+body.terms-page {
+  background-color: #2d333b !important;
+}
+
+body.privacy-page {
+  background-color: #2d333b !important;
+}
+
+body.blocked-page {
   background-color: #2d333b !important;
 }
