--- a/style.css
+++ b/style.css
@@ -1465,7 +1465,9 @@ body {
   color: #ffffff;
   margin: 0px !important;
   background: #2b2546 !important;
+
 }
+
 
 /* STRUCTURE */
 
@@ -5452,6 +5454,28 @@ input[type="text"]:focus {
   margin-top: 5px;
   margin-bottom: 50px;
 }
+
+
+@media (min-width: 100px) and (max-width: 819px) {
+
+.geniecustomers {
+  width: 93% !important;
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
+  margin-bottom: 120px;
+}
+}
+
+
+@media (min-width: 100px) and (max-width: 450px) {
+
+.hidemobileviewport {
+  display: none !important;
+}
+}
+
 
 @media (min-width: 820px) and (max-width: 1200px) and (orientation: landscape) {
   .geniecustomers {
