--- a/style.css
+++ b/style.css
@@ -5439,7 +5439,6 @@ input[type="text"]:focus {
   border-radius: 0px;
   background: linear-gradient(180deg, rgb(34 39 46), rgb(43 37 70));
   border: #454c56 0px solid;
-  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   margin-top: -20px;
@@ -7032,6 +7031,23 @@ input[type="text"]:focus {
   margin-bottom: 35px;
   margin-left: 10%;
   margin-right: 10%;
+}
+
+
+@media (min-width: 820px) and (max-width: 1200px) and (orientation: landscape) {
+.pestacle {
+  margin-left: 20% !important;
+  margin-right: 20% !important;
+}
+}
+
+
+
+@media (min-width: 820px) and (max-width: 1200px) and (orientation: landscape) {
+.legoduplo {
+  margin-left: 15% !important;
+  margin-right: 15% !important;
+}
 }
 
 .dudes1c {
